crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__predicates__select_where_unrelated_exists.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "As Canções de Eu Tu Eles"
      },
      {
        "title": "Quanta Gente Veio Ver (Live)"
      },
      {
        "title": "Quanta Gente Veio ver--Bônus De Carnaval"
      }
    ]
  }
]
